--- a/src/css/sponsors.css
+++ b/src/css/sponsors.css
@@ -15,7 +15,7 @@
 }
 
 .sponsor-logo {
-  width: 400px;
+  max-width: 400px;
 }
 
 .sponsor-text {
